# flaxen

./: .gitignore  Cargo.toml  README.md
.github/: labeler.yml
.github/workflows/: label.yml  rust.yml  stale.yml  welcome.yml
cache/: input.json
cache/input/: .json  commander.json  inputtest.json  test1.json
examples/: README.md  asciibox  bad.rs  basic.rs  buffer_image.rs  cache.rs  default.rs  events.rs  events2.rs  events3.rs  impl.rs  inputs.rs  macro.rs  mouse.rs  render.rs  renderer.rs  styled.rs  themes.rs
flaxen/: Cargo.toml
flaxen/examples/: main.rs
flaxen/resources/logs/terminal/: history  input
flaxen/src/: lib.rs
resources/logs/terminal/: history  input
src/: builders.rs  builtin_events.rs  cache.rs  commissioner.rs  components.rs  console.rs  container.rs  events.rs  history.rs  input.rs  inputs.rs  kbd_decode.rs  layout.rs  lib.rs  mouse_input.rs  object_tree.rs  overlay.rs  presets.rs  ragout.rs  raw_mode.rs  render_pipeline.rs  shin_sekai.rs  space.rs  space_awareness.rs  styled.rs  styles.rs  termbuf.rs  themes.rs
src/components/: builders.rs  container.rs  term.rs  text.rs
src/console/: raw_mode.rs  winsize.rs
src/containers/: prompt.rs
src/events/: builtin.rs  core.rs  input.rs  text_input_logic.rs
src/input/: keyboard.rs  mouse.rs
src/inputs/: keyboard.rs  mouse.rs  window.rs
src/render_pipeline/: container.rs  term.rs  text.rs
src/space/: border.rs  padding.rs
