[package]
name = "ragout"
version = "0.31.32"
edition = "2021"
description = "Terminal raw mode utilities"
license = "MIT"
repository = "https://github.com/uraneko/ragout"
readme = "README.md"
keywords = ["terminal", "raw_mode", "cli", "tui_lib"]
categories = ["command-line-interface"]
exclude = ["Cargo.lock"]
documentation = "https://docs.rs/ragout"

[[example]]
name = "inputs"
path = "examples/inputs.rs"

[[example]]
name = "components"
path = "examples/components.rs"

[[example]]
name = "renderer"
path = "examples/renderer.rs"

[[example]]
name = "overlay"
path = "examples/overlay.rs"

[[example]]
name = "layout"
path = "examples/layout.rs"

[[example]]
name = "themes"
path = "examples/themes.rs"

[[example]]
name = "styles"
path = "examples/styles.rs"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
